--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body
 
 .messages
 {
+    margin-top: 20px;
     color: rgba(176,0,12,0.8);
     background-color: #FFD2D2;
     padding-top: 10px;
@@ -48,11 +49,12 @@ body
 
 .result
 {
+    margin-top: 20px;
     color: #4F8A10;
     background-color: #DFF2BF;
-    padding-top: 10px;
+    padding-top: 20px;
     padding-left: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     width: 250px;
     border-radius: 5px;
     letter-spacing: 1px;
